# sdl-game-of-life

./: .clang-format  .clang-tidy  CMakeLists.txt
include/: log.hpp
src/: main.cpp
